# evidenceangel

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  hicolor-icon.gresource.xml  icons.toml
.github/workflows/: build.yaml  check-version-bumped.yaml  checks.yaml  ci.yaml  publish-docs.yaml  publish-schemas.yaml
angelmark/: Cargo.toml  README.md  clippy.toml
angelmark/src/: angelmark.pest  error.rs  lexer.rs  lib.rs  line.rs  table.rs  text.rs  traits.rs
angelmark/tests/: angelmark.md  test.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli.md  creating_a_package.md  creating_a_test_case.md  exporting.md  getting_started.md  glossary.md  taking_evidence.md
docs/src/images/: rebuild_images.sh
schemas/: build.sh  draft-hopkins-evp-spec.md  manifest.1.schema.json  manifest.2.schema.json  testcase.1.schema.json  testcase.2.schema.json  testcase.3.schema.json
src/: exporters.rs  lib.rs  lock_file.rs  package.rs  result.rs  zip_read_writer.rs
src/evidenceangel-cli/: angelmark.rs  arg_parser.rs  export.rs  main.rs  package.rs  test_cases.rs
src/evidenceangel-cli/result/: data.rs  error.rs  mod.rs  traits.rs
src/evidenceangel-ui/: about.rs  app.rs  author_factory.rs  custom_metadata_editor_factory.rs  custom_metadata_factory.rs  evidence_factory.rs  filter.rs  lang.rs  main.rs  nav_factory.rs  util.rs
src/evidenceangel-ui/dialogs/: add_evidence.rs  custom_metadata_field.rs  error.rs  export.rs  mod.rs  new_author.rs
src/evidenceangel-ui/evidence_factory/: file.rs  http.rs  image.rs  mod.rs  rich_text.rs  text.rs
src/evidenceangel-ui/locales/en/: main.ftl
src/evidenceangel-ui/locales/sv/: main.ftl
src/exporters/: excel.rs  html.css  html.js  html.rs  zip_of_files.rs
src/package/: manifest.rs  media.rs  test_cases.rs
wix/: .gitignore  generate_wix_script.sh  main.wxs.in
