[package]
name = "evidenceangel"
description = "Library and executables to work with EvidenceAngel evidence packages (*.evp)."
version = "1.0.2"
edition = "2021"
license = "GPL-3.0-or-later"
authors = [
    "Lily Hopkins <lily@hpkns.uk>",
    "Eden Turner <somebirb7190@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "evidenceangel-cli"
path = "src/evidenceangel-cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "evidenceangel-ui"
path = "src/evidenceangel-ui/main.rs"
required-features = ["ui"]

[features]
default = ["exporter-html"]
cli = [
    "exporter-html",
    "exporter-excel",
    "dep:clap",
    "dep:clap_complete",
    "dep:pretty_env_logger",
]
exporter-excel = ["dep:rust_xlsxwriter"]
exporter-html = ["dep:domrs", "dep:html-escape"]
ui = [
    "dep:clap",
    "dep:fern",
    "dep:fluent",
    "dep:fluent-templates",
    "dep:once_cell",
    "dep:open",
    "dep:parse_datetime",
    "dep:pretty_env_logger",
    "dep:relm4",
    "dep:relm4-icons",
    "dep:sys-locale",
    "exporter-html",
    "exporter-excel",
]
windows-keep-console-window = []

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"], optional = true }
clap_complete = { version = "4.5.2", optional = true }
domrs = { version = "0.0.16", optional = true }
fern = { version = "0.7.0", optional = true }
fluent = { version = "0.16.1", optional = true }
fluent-templates = { version = "0.11.0", optional = true }
getset = "0.1.2"
html-escape = { version = "0.2.13", optional = true }
infer = "0.16.0"
jsonschema = "0.26.1"
log = "0.4.21"
once_cell = { version = "1.19.0", optional = true }
open = { version = "5.3.0", optional = true }
parse_datetime = { version = "0.6.0", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
relm4 = { version = "0.9.0", features = [
    "libadwaita",
    "gnome_46",
], optional = true }
relm4-icons = { version = "0.9.0", optional = true }
rust_xlsxwriter = { version = "0.79.4", features = ["chrono"], optional = true }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha256 = "1.5.0"
sys-locale = { version = "0.3.1", optional = true }
thiserror = "2.0.4"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
zip = "2.2.0"
